deploy/k8s/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-opamp-server
  labels:
    app.kubernetes.io/name: opamp-control-plane
    app.kubernetes.io/part-of: opamp-control-plane
spec:
  parentRefs:
    - name: eg-observability
      namespace: observability
      sectionName: http-opamp-server
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opamp-control-plane
          port: 4320
          protocol: TCP
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-opamp-server-control-panel
  labels:
    app.kubernetes.io/name: opamp-control-plane
    app.kubernetes.io/part-of: opamp-control-plane
spec:
  parentRefs:
    - name: eg-observability
      namespace: observability
      sectionName: http-opamp-server-control-panel
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opamp-control-plane
          port: 4321
          protocol: TCP
          weight: 1
